--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,41 +1,97 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>知链智阁 - 区块链知识服务平台</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>知链智阁项目 - Cognitive Chain Pavilion</title>
+    <link href="https://cdn.bootcdn.net/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-            height: 100vh;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
+        .hero-section {
+            background: linear-gradient(135deg, #1a237e 0%, #0d47a1 100%);
+            color: white;
+            padding: 100px 0;
+            margin-bottom: 50px;
         }
-        .container {
-            padding: 2rem;
-            background: rgba(255, 255, 255, 0.9);
-            border-radius: 15px;
+        .feature-card {
+            border: none;
+            border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s;
         }
-        h1 {
-            color: #2c3e50;
-            margin-bottom: 1.5rem;
-        }
-        p {
-            color: #34495e;
-            font-size: 1.1rem;
-            margin-bottom: 2rem;
+        .feature-card:hover {
+            transform: translateY(-5px);
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>欢迎来到知链智阁</h1>
-        <p>区块链知识服务平台正在建设中...</p>
+    <!-- 导航栏 -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">知链智阁项目</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/api/resources">学习资源</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/api/auth/login">登录</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/api/auth/register">注册</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- 主要内容 -->
+    <div class="hero-section">
+        <div class="container text-center">
+            <h1 class="display-4 mb-4">欢迎来到知链智阁项目</h1>
+            <p class="lead mb-4">探索无限可能</p>
+            <a href="/api/auth/register" class="btn btn-light btn-lg">立即开始</a>
+        </div>
     </div>
+
+    <div class="container mb-5">
+        <div class="row">
+            <div class="col-md-4 mb-4">
+                <div class="card feature-card h-100">
+                    <div class="card-body text-center">
+                        <h3 class="card-title">学习资源</h3>
+                        <p class="card-text">丰富的学习资料，助您快速掌握技术要点</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card feature-card h-100">
+                    <div class="card-body text-center">
+                        <h3 class="card-title">技术讨论</h3>
+                        <p class="card-text">与志同道合的开发者交流经验，共同进步</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card feature-card h-100">
+                    <div class="card-body text-center">
+                        <h3 class="card-title">知识分享</h3>
+                        <p class="card-text">分享您的见解，为区块链社区贡献力量</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 页脚 -->
+    <footer class="bg-dark text-light py-4">
+        <div class="container text-center">
+            <p class="mb-0">© 2024 知链智阁项目. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <script src="https://cdn.bootcdn.net/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
